<resources>
    <string name="app_name">Tampa Metropolitan Area YMCA</string>
    <string name="splash_footer">Copyright @ 2017 Tampa Metropolitan Area YMCA</string>
    <string name="splash_header">TAMPA METROPOLITAN\n AREA YMCA</string>
    <string name="select_branch_label">Find Your Y</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loc_mes"><b>Location:</b> Front parking lot of every branch.</string>
    <string name="date_mes"><b>Date:</b> August 12th, September.</string>
    <string name="time_mes"><b>Time:</b> 12:00 PM.</string>
    <string name="default_location">Default Location</string>
    <string name="messages">Messages</string>
    <string name="general">General</string>
    <string name="schedules">Schedules</string>
    <string name="programs">Programs</string>

    <string-array name="locations">
        <item>Location 1</item>
        <item>Location 2</item>
        <item>Location 3</item>
    </string-array>


    <string name="schedule_message">A high-energy material arts-inspired workout that is totally non-contact. Punchand kick your way to fitness.
     Learn moves from karate, Taekwondo,Boxing,Muay Thai, Capoeira and Kung Fu.</string>

    <string name="please_wait">Please Wait.....</string>
    <string name="internet_connection_message">Please check your internet connection</string>

    <string name="session_expired">Logged in other device? Login again.</string>
    <string name="ok">Ok</string>
</resources>
