<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.android.activelife.tampa.fragments.MemberSettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <com.android.activelife.tampa.customviews.CachetProMediumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_location"
            android:textColor="@color/grey_text"
            android:textSize="@dimen/default_location_header_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@drawable/spinner_background"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingBottom="2sp"
            android:paddingLeft="5sp"
            android:paddingRight="2sp"
            android:paddingTop="5sp">

            <Spinner
                android:id="@+id/default_location_spinner"
                style="@android:style/Widget.Holo.Light.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/locations" />
        </LinearLayout>

        <com.android.activelife.tampa.customviews.CachetProMediumTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10sp"
            android:text="@string/messages"
            android:textColor="@color/grey_text"
            android:textSize="@dimen/default_location_header_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <com.android.activelife.tampa.customviews.CachetProRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/general"
                android:textColor="@color/grey_text"
                android:textSize="@dimen/settings_text_size" />

            <CheckBox
                android:id="@+id/msg_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <com.android.activelife.tampa.customviews.CachetProRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/schedules"
                android:textColor="@color/grey_text"
                android:textSize="@dimen/settings_text_size" />

            <CheckBox
                android:id="@+id/sch_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <com.android.activelife.tampa.customviews.CachetProRegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/programs"
                android:textColor="@color/grey_text"
                android:textSize="@dimen/settings_text_size" />

            <CheckBox
                android:id="@+id/prg_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
