<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_vertical_margin">

            <com.android.activelife.customviews.CachetProMediumTextView
                android:id="@+id/message_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="Blood Drive"
                android:textColor="@color/grey_text"
                android:textSize="15sp" />

            <com.android.activelife.customviews.CachetProRegularTextView
                android:id="@+id/message_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="Let's save some lives today!\n\nOn whole blood donation can save upto 3 lives! Someone needs a blood transfusion every 2 seconds, and one in ten patients entering hospital will need blood. Over 500 people need to donate every day to meet the daily needs of the hospitals we server and be prepared for emergencies."
                android:textColor="@color/grey_text"
                android:textSize="14sp" />

            <com.android.activelife.customviews.CachetProRegularTextView
                android:id="@+id/message_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/loc_mes"
                android:textColor="@color/grey_text"
                android:textSize="14sp" />

            <com.android.activelife.customviews.CachetProRegularTextView
                android:id="@+id/message_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/date_mes"
                android:textColor="@color/grey_text"
                android:textSize="14sp" />

            <com.android.activelife.customviews.CachetProRegularTextView
                android:id="@+id/message_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/time_mes"
                android:textColor="@color/grey_text"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>